<resources>
    <string name="app_name">我的外卖</string>
    <string name="tab_home">首页</string>
    <string name="tab_more">更多</string>
    <string name="tab_order">订单</string>
    <string name="tab_mine">我的</string>
    <string name="address">浙江省绍兴市柯桥区浙江工业大学之江学院</string>
    <string name="temperature">20°C</string>
    <string name="search_seller">输入商家、商品名称</string>
    <string name="title_recommend_seller">推荐商家</string>
    <string name="item_type">种类</string>
    <string name="takeout_tv_deliveryFee">另需配送费￥4</string>
    <string name="takeout_tv_sendPrice">￥100元起送</string>
    <string name="takeout_tv_submit">去结算</string>
    <string name="takeout_tv_table_row">肯德基</string>
    <string name="takeout_tv_table_title">------------------大家都在找------------------</string>
    <string name="takeout_tv_brand">品牌</string>
    <string name="takeout_tv_score">4.2</string>
    <string name="takeout_tv_sale">月售243单</string>
    <string name="takeout_tv_distance">1.72km</string>
    <string name="takeout_tv_time">27分钟</string>
    <string name="takeout_tv_ranking">综合排序</string>
    <string name="takeout_tv_sort_distance">距离最近</string>
    <string name="takeout_tv_choose_quality">品质联盟</string>
    <string name="takeout_tv_choose">筛选</string>
</resources>
