<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slide"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_5"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:src="@mipmap/icon_shop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/title_recommend_seller"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/dp_10"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_title_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_ranking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_5"
                    android:text="@string/takeout_tv_ranking"/>

                <ImageView
                    android:id="@+id/tv_arrow"
                    android:layout_width="@dimen/dp_12"
                    android:layout_height="@dimen/dp_12"
                    android:src="@mipmap/ic_arrow_down"/>

            </LinearLayout>


            <TextView
                android:id="@+id/tv_sort_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/takeout_tv_sort_distance"/>

            <TextView
                android:id="@+id/tv_choose_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/takeout_tv_choose_quality"/>

            <LinearLayout
                android:id="@+id/ll_item_home_title_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_5"
                    android:text="@string/takeout_tv_choose"/>

                <ImageView
                    android:layout_width="@dimen/dp_12"
                    android:layout_height="@dimen/dp_12"
                    android:src="@mipmap/ic_choose"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>