<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/takeout_white"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_10"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_5">

            <ImageView
                android:id="@+id/iv_seller"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_80"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:src="@drawable/takeout_head_icon_seller_default"/>

            <TextView
                android:id="@+id/tv_Count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="visible"
                android:layout_gravity="right"
                android:background="@drawable/takeout_background_solid_red_circle"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/takeout_white"
                android:text="1"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_2"
                    android:text="@string/takeout_tv_brand"
                    android:textSize="@dimen/sp_8"
                    android:background="@drawable/takeout_background_solid_gold"/>

                <TextView
                    android:id="@+id/tv_seller_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="肯德基宅急送"
                    android:textColor="@color/takeout_black"
                    android:textSize="@dimen/sp_15"/>

                <ImageView
                    android:id="@+id/iv_pic"
                    android:layout_width="@dimen/dp_15"
                    android:layout_height="@dimen/dp_15"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/dp_5"
                    android:src="@mipmap/ellipsis"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:gravity="center_vertical">

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rating="4"
                    style="?android:attr/ratingBarStyleSmall"/>

                <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="@string/takeout_tv_score"
                    android:textSize="@dimen/sp_10"/>

                <TextView
                    android:id="@+id/tv_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="@string/takeout_tv_sale"
                    android:textSize="10sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_delivery_fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_5"
                    android:text="@string/takeout_tv_deliveryFee"
                    android:textSize="@dimen/sp_10"/>

                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="@dimen/dp_15"
                    android:background="@color/takeout_view_bg_gray"/>

                <TextView
                    android:id="@+id/tv_send_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:text="@string/takeout_tv_sendPrice"
                    android:textSize="@dimen/sp_10"/>

                <TextView
                    android:id="@+id/tv_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_5"
                    android:text="@string/takeout_tv_distance"
                    android:textSize="@dimen/sp_10"/>

                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="@dimen/dp_10"
                    android:background="@color/takeout_view_bg_gray"/>

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:text="@string/takeout_tv_time"
                    android:textSize="@dimen/sp_10"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_8"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/takeout_background_stroke"
                    android:paddingTop="@dimen/dp_2"
                    android:paddingBottom="@dimen/dp_2"
                    android:paddingLeft="@dimen/dp_5"
                    android:paddingRight="@dimen/dp_5"
                    android:layout_marginRight="@dimen/dp_5"
                    android:text="快餐"
                    android:textSize="@dimen/sp_8"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/takeout_background_stroke"
                    android:paddingTop="@dimen/dp_2"
                    android:paddingBottom="@dimen/dp_2"
                    android:paddingLeft="@dimen/dp_5"
                    android:paddingRight="@dimen/dp_5"
                    android:layout_marginRight="@dimen/dp_5"
                    android:text="品质保证"
                    android:textSize="@dimen/sp_8"/>
            </LinearLayout>

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_10"
                android:background="@color/takeout_view_bg_gray"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_2"
                    android:background="@drawable/takeout_background_solid_red"
                    android:text="减"
                    android:textSize="@dimen/sp_10"
                    android:textColor="@color/takeout_white"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:text="在线支付49元减10元，满89元减16元"
                    android:textSize="@dimen/sp_10"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/takeout_view_bg_gray"
        android:layout_marginTop="@dimen/dp_8"/>
</LinearLayout>