<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fl_Container">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <com.flipboard.bottomsheet.BottomSheetLayout
            android:id="@+id/bottomSheetLayout"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_width="match_parent">

            <LinearLayout
                android:fitsSystemWindows="false"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:background="@color/takeout_ll_bg_red"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_25">

                    <ImageButton
                        android:background="@drawable/takeout_back_icon"
                        android:id="@+id/ib_back"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_width="wrap_content" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginRight="@dimen/dp_10"
                        android:layout_weight="1"
                        android:layout_width="@dimen/dp_0"
                        android:singleLine="true"
                        android:text="田老师红烧肉(东北旺西路店)"
                        android:textColor="@color/takeout_white"
                        android:textSize="@dimen/sp_20"
                        android:textStyle="bold" />

                    <ImageButton
                        android:background="@drawable/takeout_moreoverflow_icon"
                        android:id="@+id/ib_menu"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dp_10"
                        android:layout_width="wrap_content" />
                </LinearLayout>

                <!-- app:tabIndicatorColor="#00f"  tab底部选中的颜色标识
                     app:tabIndicatorHeight="4dp" 标识的高度
                     app:tabSelectedTextColor="#00f"  选中tab文字的颜色
                     app:tabTextColor="#000"   没有选中tab文字的颜色
                     -->
                <android.support.design.widget.TabLayout
                    android:id="@+id/tabs"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:tabIndicatorColor="@color/takeout_blue"
                    app:tabIndicatorHeight="@dimen/dp_4"
                    app:tabSelectedTextColor="@color/takeout_blue"
                    app:tabTextColor="@color/takeout_black"/>

                <android.support.v4.view.ViewPager
                    android:id="@+id/vp"
                    android:layout_height="@dimen/dp_0"
                    android:layout_weight="1"
                    android:layout_width="match_parent"/>
            </LinearLayout>

        </com.flipboard.bottomsheet.BottomSheetLayout>

        <LinearLayout
            android:id="@+id/bottom"
            android:background="@color/takeout_ll_bg_dark_gray"
            android:clickable="true"
            android:gravity="center_vertical"
            android:layout_height="@dimen/dp_50"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="@dimen/dp_50">

                <ImageView
                    android:id="@+id/imgCart"
                    android:layout_centerInParent="true"
                    android:layout_height="@dimen/dp_30"
                    android:layout_width="@dimen/dp_30"
                    android:src="@drawable/takeout_cart_icon_empty" />

                <TextView
                    android:id="@+id/tvSelectNum"
                    android:background="@drawable/takeout_background_solid_red_circle"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="1"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:textColor="@color/takeout_white"
                    android:textSize="@dimen/sp_12"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvCountPrice"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/dp_2"
                android:gravity="center_vertical"
                android:text="￥0"
                android:textColor="@color/takeout_white"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tvDeliveryFee"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/dp_5"
                android:gravity="center"
                android:text="@string/takeout_tv_deliveryFee"
                android:textColor="@color/takeout_white"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:gravity="center"
                android:id="@+id/tvSendPrice"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:text="@string/takeout_tv_sendPrice"
                android:textColor="@color/takeout_white"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tvSubmit"
                android:background="@color/takeout_tv_submit_bg_green"
                android:clickable="true"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="@dimen/dp_90"
                android:text="@string/takeout_tv_submit"
                android:textColor="@color/takeout_white"
                android:textSize="@dimen/sp_18"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>